# my-python-utils

./: .env  .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: pypi-publish.yml
.history/: .gitignore_20220305150325  .gitignore_20220305150327  .gitignore_20220305150332  .gitignore_20220305150338  .gitignore_20220305150357  .gitignore_20220305150403  .gitignore_20220305150418  .gitignore_20220305183915  README_20220305122500.md  setup_20220305111824.cfg  setup_20220305122521.cfg  setup_20220305122943.cfg  setup_20220305124157.cfg  setup_20220305124200.cfg  setup_20220305124202.cfg  setup_20220305124203.cfg  setup_20220305124946.cfg  setup_20220305124947.cfg  setup_20220305125008.cfg  setup_20220305125048.cfg  setup_20220305125050.cfg  setup_20220305125053.cfg  setup_20220305125102.cfg  setup_20220305125249.cfg  setup_20220305125638.cfg  setup_20220305125811.cfg  setup_20220305125816.cfg  setup_20220305125825.cfg  setup_20220305130424.cfg  setup_20220305130505.cfg  setup_20220305130510.cfg  setup_20220305130519.cfg  setup_20220305183056.cfg  setup_20220305183059.cfg  setup_20220305183107.cfg  setup_20220305183108.cfg  setup_20220305183111.cfg  setup_20220305183113.cfg  setup_20220305183308.cfg  setup_20220305183315.cfg  (+1 more)
src/custom_utils/: __init__.py  message_notifier.py
src/email_notifier/: __init__.py
src/my_custom_utils/: __init__.py  message_notifier.py
src/my_utils/: .gitignore  __init__.py  message_notifier.py
