[metadata]
name = custom_utils-cassius_jonus
version = 0.1.1
author = Cassius Jonus
author_email = vegetafan5@gmail.com
description = A package containing utility modules
long_description = file: README.md
long_description_content_type = text/markdown
project_url = https://github.com/CassiusJonus/my-python-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
python_requires = >= 3.6

[options.packages.find]
where = src
